gohome/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: gohome
  name: gohome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gohome
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gohome
    spec:
      containers:
      - image: lalyos/12factor
        name: 12factor
        ports:
        - containerPort: 80
        resources: {}
status: {}
