gohome/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: gohome
  name: gohome
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: gohome
status:
  loadBalancer: {}
