gohome/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: gohome
spec:
  rules:
  - host: gohome.k8z.eu
    http:
      paths:
      - backend:
          service:
            name: gohome
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
